--- a/Entrega2-war/web/crearTecnico.xhtml
+++ b/Entrega2-war/web/crearTecnico.xhtml
@@ -46,18 +46,18 @@
         <!-- Navigation -->
         <!--<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" >-->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" >
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <h:form><h:commandLink class="navbar-brand" action="administrador.xhtml">Administratador</h:commandLink></h:form>
-            </div>
-            <!-- Top Menu Items -->
-            <ul class="nav navbar-right top-nav">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <h:form><h:commandLink class="navbar-brand" action="administrador.xhtml">Administrador</h:commandLink></h:form>
+                        </div>
+                        <!-- Top Menu Items -->
+                        <ul class="nav navbar-right top-nav">
 
 
                             <li class="dropdown">
@@ -65,7 +65,7 @@
                                 <ul class="dropdown-menu">
                                     <h:form>
                                         <li >
-                                            <h:commandLink action="perfilAdministrativo.xhtml" ><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
+                                            <h:commandLink action="perfil.xhtml" ><i class="fa fa-fw fa-user"></i> Perfil </h:commandLink>
                                         </li>
 
                                         <li class="divider"></li>
@@ -76,16 +76,17 @@
                                 </ul>
                             </li>
                         </ul>
-             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+                        <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
                         <div class="collapse navbar-collapse navbar-ex1-collapse">
+                            <h:form>
                             <ul class="nav navbar-nav side-nav">
+                                 
+                                    <!-- Gestion de usuarios -->
+                                    <li>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-edit"></i> Gestionar Usuarios <i class="fa fa-fw fa-caret-down"></i></a>
 
-                                <!-- Gestion de usuarios -->
-                                <li>
-                                    <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-edit"></i> Gestionar Usuarios <i class="fa fa-fw fa-caret-down"></i></a>
+                                        <ul id="demo" class="collapse">
 
-                                    <ul id="demo" class="collapse">
-                                        <h:form>    
                                             <li>
                                                 <h:commandLink action="crearJefeServicio.xhtml" >Crear Jefe de Servicio</h:commandLink>
                                             </li>
@@ -100,12 +101,13 @@
                                             </li>
                                             <li>
                                                 <h:commandLink action="eliminarUsuario.xhtml">Eliminar Usuario</h:commandLink>                                        </li>
-                                        </h:form>    
-                                    </ul>
+
+                                        </ul>
 
 
-                                </li>
+                                    </li>
                             </ul>
+                            </h:form> 
                         </div>
                         <!-- /.navbar-collapse -->
                     </nav>
