María y Salva - modificaciones de controladores y de input en algunas vistas

--- a/Entrega2-war/web/crearAdministrativo.xhtml
+++ b/Entrega2-war/web/crearAdministrativo.xhtml
@@ -150,7 +150,7 @@
 
                                             <div class="form-group">
                                                 <label>Fecha de nacimiento</label>
-                                                <p> <h:inputText  ></h:inputText></p>
+                                                <p> <h:inputText  value ="#{administrativos.nacimiento}" ></h:inputText></p>
                                             </div>
 
                                             <div class="form-group">
